UtahLiveDataTest/src/objects/ApplicationBudgetCategory2__c.object
<CustomObject>
    <description>[Business] Stores the Budget related information associated with an Application</description>
    <fields>
        <fullName>AdminCostValue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AdminCostValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costs Not Allowable for Participation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppBudgetCategoryStatus__c</fullName>
        <description>This field is used to determine which categories are to be used for Construction form.</description>
        <label>App Budget Category Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplicationStatus__c</fullName>
        <formula>IF( ISPICKVAL(Application__r.Status__c, &quot;Converted to Grant&quot;), TRUE, FALSE)</formula>
        <label>Application Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Application_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BudgetAmountUSBE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BudgetAmountUSBE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipName>Application_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Application Budget Categories</relationshipLabel>
        <relationshipName>Application_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BuildupRequired__c</fullName>
        <formula>Text(Application__r.Announcement__r.DetailedBudgetingRequired__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BuildupRequired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashMatch__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CatName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <formula>TEXT(BudgetCategory__r.Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <label>Currency1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>Federal__c - LastYearAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail (FORMS)</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Application Budget Categories (Application Detail (FORMS))</relationshipLabel>
        <relationshipName>Application_Budget_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <formula>Application__r.FormsValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormsValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount from Grantee in Application for each Budget Category</description>
        <inlineHelpText>Amount from Grantee in Application for each Budget Category</inlineHelpText>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeShare__c</fullName>
        <formula>If(Amount__c&lt;=0, 0, GranteeAmount__c / Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Grantor Amount</description>
        <inlineHelpText>Grantor Amount</inlineHelpText>
        <label>Grantor Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HideBudgetEdit__c</fullName>
        <formula>If(BuildupRequired__c==&apos;No&apos; &amp;&amp; Status__c = &apos;Created&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Budget Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetFormBreakdownButton__c</fullName>
        <description>IF(
AND(
BudgetCategory__r.RowNumber__c == &apos;570&apos;,  
OR(
TEXT(Application__r.Status__c) = &apos;Created&apos; , 
TEXT(Application__r.Status__c) = &apos;Revision Initiated&apos;, 
TEXT(Application__r.Status__c) = &apos;Revision In Progress&apos;
)
),
FALSE, TRUE )</description>
        <formula>IF(
Application__r.OwnerId &lt;&gt; $User.Id,
TRUE,
IF(
AND(
BudgetCategory__r.RowNumber__c == &apos;570&apos;,  
OR(
TEXT(Application__r.Status__c) = &apos;Created&apos; , 
TEXT(Application__r.Status__c) = &apos;Revision Initiated&apos;, 
TEXT(Application__r.Status__c) = &apos;Revision In Progress&apos;
)
),
FALSE, TRUE )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetFormBreakdownButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetFormEditButton__c</fullName>
        <description>Previous Formula: 
IF( 
OR( 
AND(Application__r.ProgramBudgetTypeUSBE__c != &apos;CTE&apos;,OR(BudgetCategory__r.RowNumber__c == &apos;570&apos;, 
BudgetCategory__r.RowNumber__c == &apos;599&apos;)), 
AND(Application__r.ProgramBudgetTypeUSBE__c == &apos;CTE&apos;,OR(BudgetCategory__r.RowNumber__c == &apos;570&apos;,BudgetCategory__r.RowNumber__c == &apos;599&apos;)),
NOT(
OR(
TEXT(Application__r.Status__c) = &apos;Created&apos;,
TEXT(Application__r.Status__c) = &apos;Revision Initiated&apos;,
TEXT(Application__r.Status__c) = &apos;Revision In Progress&apos;
)
)
), TRUE, FALSE )</description>
        <formula>OR(
Application__r.OwnerId  &lt;&gt; $User.Id,
AND(Application__r.ProgramBudgetTypeUSBE__c != &apos;CTE&apos;,OR(BudgetCategory__r.RowNumber__c == &apos;570&apos;, 
BudgetCategory__r.RowNumber__c == &apos;599&apos;)), 
AND(Application__r.ProgramBudgetTypeUSBE__c == &apos;CTE&apos;,OR(BudgetCategory__r.RowNumber__c == &apos;570&apos;,BudgetCategory__r.RowNumber__c == &apos;599&apos;)),
NOT(
OR(
TEXT(Application__r.Status__c) = &apos;Created&apos;,
TEXT(Application__r.Status__c) = &apos;Revision Initiated&apos;,
TEXT(Application__r.Status__c) = &apos;Revision In Progress&apos;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetFormEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>hide Edit on Budget Grid on Application</description>
        <formula>Application__r.HideEditBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>hide Edit on Budget Grid on Application</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfNotBuildupBudgetCategory__c</fullName>
        <formula>IF(BudgetCategory__r.RowNumber__c != &apos;570&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide If Not Buildup Budget Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIndirectCostBuildUp__c</fullName>
        <formula>CatName__c = &apos;Indirect Costs&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Indirect Cost Build Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBuildupBtn__c</fullName>
        <description>Logic for Hiding New Buildup Button</description>
        <formula>Application__r.ExternalApplicantStatus__c == &apos;Submitted to Grantor&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Buildup Button</inlineHelpText>
        <label>Hide New Buildup Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewLine__c</fullName>
        <formula>AND(Application__r.ExternalApplicantStatus__c = &apos;Submitted to Grantor&apos;,NOT(ISPICKVAL(Application__r.ChangeRequestStatus__c, &apos;Revision Request Assigned&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InKind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>In-Kind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectCostEdit__c</fullName>
        <formula>NOT(CategoryName__c = &apos;indirectCostFake&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IndirectCostEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndirectCost__c</fullName>
        <formula>IF(BudgetCategory__r.Name = &apos;Equipment&apos;,0,Application__r.IndirectCostPercentage__c * Federal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsBuildupRequired__c</fullName>
        <formula>If(BuildupRequired__c==&apos;No&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsBuildupRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstBudgetPeriodRelated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this record related to First BP ?</description>
        <inlineHelpText>Is this record related to First BP ?</inlineHelpText>
        <label>Is First Budget Period Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastYearAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Last Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Narration__c</fullName>
        <description>Description for Budget Category</description>
        <label>Narration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofServiceArea__c</fullName>
        <formula>Application__r.NumberOfServiceAreasRequested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Service Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCost__c</fullName>
        <description>Project Budget + Admin Cost</description>
        <formula>AdminCostValue__c +  BudgetAmountUSBE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectBudgetPlusAdminCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumber1__c</fullName>
        <label>Row Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNumberFormula__c</fullName>
        <formula>BudgetCategory__r.RowsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaTitle__c</fullName>
        <formula>ServiceArea__r.ServiceAreaTitle__c</formula>
        <label>Service Area Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ApplicationServiceArea__c</referenceTo>
        <relationshipName>Application_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>text(Application__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestIndirectHideColumn__c</fullName>
        <formula>IF( TestIndirectPercentage__c &gt;= 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestIndirectHideColumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestIndirectPercentage__c</fullName>
        <description>Value of Indirect Percentage used temporarily for testing budget form (until the properly acquired indirect value can be drawn). This formula converts the raw number into a decimal for use in calculations.</description>
        <formula>Application__r.TestIndirectPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestIndirectPercentage</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAllowableCosts__c</fullName>
        <description>This field is used in SF424 Budget Construction grid</description>
        <formula>BudgetCategoryAmount__c  -  RequestedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allowable Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalGrantCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Grant Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(BudgetCategory__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Application Budget Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountLessThanZero</fullName>
        <active>false</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The negotiated amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AmountLessThanZero1</fullName>
        <active>false</active>
        <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Total__c</errorDisplayField>
        <errorMessage>The negotiated amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>RequestedAmount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>RequestedAmount__c</errorDisplayField>
        <errorMessage>The requested amount cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>